优化班级相关api
